# fast_zero

./: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/routes/: auth.py  todos.py  users.py
fast_zero/types/: types_annotated.py  types_app.py  types_users.py
tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
